<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>

    <!-- Text inside the Sale Button in the CatalogActivity -->
    <string name="list_item_sale_button">Sale</string>

    <!-- Label for price in CatalogActivity -->
    <string name="list_item_price_label">Price: </string>
    
    <!-- Label for quantity in CatalogActivity -->
    <string name="list_item_quantity_label">In stock: </string>
    
    <!-- Label for product name in Editor-->
    <string name="name">Name</string>

    <!-- Label for product price in Editor-->
    <string name="price">Price</string>

    <!-- Label for product quantity in Editor-->
    <string name="quantity">Quantity</string>

    <!-- Hint for product quantity in Editor-->
    <string name="quantity_hint">4</string>

    <!-- Label for product supplier email hint in Editor-->
    <string name="supplier_email">Supplier email</string>

    <!-- Hint for product supplier email in Editor-->
    <string name="supplier_email_hint">supplier@supplier.com</string>

    <!-- Label for Delete button in Editor-->
    <string name="delete_product_entry">Delete product</string>

    <!-- Label for Order button in Editor-->
    <string name="order_product_from_supplier">Order more</string>

    <!-- Decrement Button in Editor -->
    <string name="decrement">-</string>

    <!-- Increment Button in Editor -->
    <string name="increment">+</string>

    <!-- Menu options in Catalog -->
    <string name="action_delete_all_entries">Delete all entries</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Message shown when product is saved successfully -->
    <string name="message_product_saved">Product was saved successfully</string>

    <!-- Message shown when product was not saved successfully -->
    <string name="message_product_not_saved">Error occurred. Product was not saved</string>

    <!-- Message shown when product is updates successfully -->
    <string name="message_product_updated">Product updated</string>

    <!-- Message shown when product is not saved -->
    <string name="message_product_update_failed">Error occurred. Product update failed</string>

    <!-- Message shown when product is deleted successfully -->
    <string name="message_product_deleted">Product has been deleted</string>

    <!-- Message shown when product is not deleted -->
    <string name="message_product_delete_failed">Error occurred. Product was not deleted</string>

    <!-- Message shown when user enters too large amount to subtract form quantity -->
    <string name="message_invalid_amount_to_subtract">Can\'t subtract more items than you have</string>

    <!-- Message shown when user tries to save product, but hasn't provided products name -->
    <string name="message_no_product_name">To save product, enter products name</string>

    <!-- Message shown when user tries to save product, but hasn't provided products price -->
    <string name="message_no_product_price">To save product, enter products price</string>

    <!-- Message shown when user tries to save product, but hasn't provided products quantity -->
    <string name="message_no_product_quantity">To save product, enter products quantity</string>

    <!-- Message shown when user tries to save product, but hasn't provided suppliers email -->
    <string name="message_no_supplier_email">To save product, enter suppliers email</string>

    <!-- Message shown when user tries to save product, but hasn't provided an image -->
    <string name="message_no_image">To save product, choose an image for the product</string>

    <!-- Message for when the product is out of stock and user presses Sale Button -->
    <string name="message_out_of_stock">Out of stock. Can\'t make a sale</string>

    <!-- error message for edit quantity by X amount field -->
    <string name="message_error_occurred">Error occurred. Try again</string>

    <!-- EditorActivity title to add a new product -->
    <string name="editor_activity_title_add_product">Add Product</string>

    <!-- EditorActivity title to edit a product -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog message to ask the user to confirm deleting all products [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for dropdown menu option to select decrement option [CHAR LIMIT=20] -->
    <string name="spinner_subtract">Subtract</string>

    <!-- Label for dropdown menu option to select decrement option [CHAR LIMIT=20] -->
    <string name="spinner_add">Add</string>

    <!-- Label for Order more Button -->
    <string name="button_order_more">Order more</string>

    <!-- Label for Delete Button -->
    <string name="button_delete">Delete product</string>

    <!-- Email message template for ordering more products -->
    <string name="email_order_more">Hello! I would like to order </string>

    <!-- Message in CatalogActivity when the database is empty -->
    <string name="empty_state_text_view">There are no products added yet</string>

    <!-- Instructions on how to populate empty database -->
    <string name="empty_state_text_view_instructions">To add an item , click the add icon</string>

    <!-- Instructions on how to add an image -->
    <string name="no_image_text_view">Click here to add an image</string>

    <!-- Text for quantity field in CatalogActivity -->
    <string name="catalog_in_stock">In stock:</string>

</resources>
