<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:paddingLeft="4dp" />
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:paddingLeft="4dp" />
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/quantity" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Decrement Button -->
            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/decrement"/>

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:layout_marginRight="@dimen/activity_margin_small"
                android:paddingRight="@dimen/activity_margin_small"
                android:paddingLeft="@dimen/activity_margin_small"
                android:hint="@string/quantity_hint"
                android:inputType="number"/>

            <!-- Increment Button -->
            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/increment"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Edit Quantity-by category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:paddingRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/edit_quantity_by" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Decrement Button -->
            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/decrement"/>

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_product_quantity_by"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_small"
                android:layout_marginRight="@dimen/activity_margin_small"
                android:paddingRight="@dimen/activity_margin_small"
                android:paddingLeft="@dimen/activity_margin_small"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_hint"
                android:inputType="number"/>

            <!-- Increment Button -->
            <Button
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/increment"/>
        </LinearLayout>

    </LinearLayout>


    <!-- Supplier email category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/supplier_email" />

        <!-- Supplier email field -->
        <EditText
            android:id="@+id/edit_product_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/supplier_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="4dp" />
    </LinearLayout>
</LinearLayout>
